[package]
name = "sp-im"
version = "0.0.1"
authors = ["John Burnham <john@yatima.io>"]
edition = "2018"
license = "MIT"
description = "Immutable collection datatypes"
repository = "https://github.com/yatima-inc/sp-im"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent", "no_std", "b-tree", "rrb-tree"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "./src/lib.rs"

[build-dependencies]
version_check = "0.9"

[features]
debug = []

[dependencies]
typenum = "1.12"
bitmaps = "2"
sized-chunks = "0.6"
rand_core = "0.5.1"
rand_xoshiro = "0.4"
serde = { version="1", optional=true }
rayon = { version="1", optional=true }
refpool = { version="0.4", optional=true }
sp-std = { version="3", default-features=false }

[dev-dependencies]
arbitrary = { version="1", features = ["derive"] }
quickcheck = { version="1" }
quickcheck_macros = { version="1" }
serde = "1"
serde_json = "1"
rayon = "1"
rand = { version="0.8", features=["small_rng"] }
pretty_assertions = "0.6"
metrohash = "1"
proptest = "0.5"
