[package]
name = "sp-im"
version = "0.2.0"
edition = "2018"
authors = [
	"John Burnham <john@yatima.io>",
	"Anders C. Sørby <anders@yatima.io>",
	"Samuel Burnham <sam@yatima.io>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yatima-inc/sp-im"
documentation = "https://docs.rs/sp-im"
description = "Immutable datatypes for no_std use within Substrate"
categories = ["data-structures", "no-std"]
keywords = ["immutable", "persistent", "no-std", "b-tree", "rrb-tree"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "./src/lib.rs"

[build-dependencies]
version_check = "0.9"

[features]
std = []
debug = []

[dependencies]
typenum = "1.2"
bitmaps = { version = "3.1.0", default-features = false }
sp-sized-chunks = { version = "0.1.0", default-features = false }
rand_core = { version = "0.5.1", default-features = false }
rand_xoshiro = "0.4"
serde = { version="1", optional=true }
rayon = { version="1", optional=true }
refpool = { version="0.4", optional=true }
sp-std = { version="3", default-features = false }
spin = "0.9"

[dev-dependencies]
arbitrary = { version="1", features = ["derive"] }
quickcheck = { version="1" }
quickcheck_macros = { version="1" }
serde = "1"
serde_json = "1"
rayon = "1"
rand = { version="0.8", features=["small_rng"] }
pretty_assertions = "0.6"
metrohash = "1"
proptest = "0.5"
